examples/invalid/semanticErr/declaration/basicTypeErr10.wacc
# type mismatch: string <- int
# Output:
# #semantic error#

#Program:#

begin
  string s = 128
end
